# python_packaging_example

./: .gitignore  README.md  pyproject.toml  requirements_dev.in  requirements_dev.txt
.github/: SECURITY.md
.github/workflows/: publish-to-test-pypi.yml
docs/: CI_CD_and_PyPI_releases.md
src/example_package_grumbit/: example.py
tests/example_package_grumbit/: test_example.py
