[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "example_package_grumbit"
version = "0.0.7"
authors = [
  { name="Graham Coster", email="bitjugglers@gmail.com" },
]
description = "This is a working example that uses a GitHub actions CI/CD workflow to test, build and upload a Python package to TestPyPi and PyPi."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.09"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/grumBit/packaging_tutorial"
"Bug Tracker" = "https://github.com/grumBit/packaging_tutorial/issues"
