[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "example_package_grumbit"
version = "1.0.1"
authors = [
  { name="Graham Coster", email="bitjugglers@gmail.com" },
]
description = "This is a working example that uses a GitHub actions CI/CD workflow to test, build and upload a Python package to TestPyPi and PyPi."
readme = "README.md"
requires-python = ">=3.09"
dependencies = []
classifiers = [
    "Development Status :: 5 - Production/Stable", # Chose either "3 - Alpha", "4 - Beta" or "5 - Production/Stable" as the current state of your package
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/grumBit/packaging_tutorial"
"Bug Tracker" = "https://github.com/grumBit/packaging_tutorial/issues"
"Source" = "https://github.com/grumBit/packaging_tutorial"

[project.optional-dependencies]
dev = [
    "black",
    "mypy",
    "pylint",
    "pytest",
    "pytest-cov",
]

[tool.pytest.ini_options]
addopts = "--cov --cov-report html --cov-report term-missing --cov-fail-under 50"

[tool.coverage.run]
source = ["src"]

[tool.pylint]
max-line-length = 120
disable = [
    "C0114", # (missing-module-docstring)
    "C0115", # (missing-class-docstring)
    "C0116", # (missing-function-docstring)
]
